--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta name ="viewport" content="width=device-width, initial scale=1.0">
     <link rel="stylesheet" href="main.css" type="text/css">
     <title>About Me Page</title>
-    <link rel="icon" href="/html.png" type="image/x-icon" sizes="32*32">
+    <link rel="icon" href="/favicon.png" type="image/png" >
     
     <link rel="icon" href="/html copy.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
